--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,14 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -26,13 +34,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/profile, roles: ROLE_USER }
+
+    access_denied_url: /access-denied
+
     role_hierarchy:
-        # https://symfony.com/doc/current/security.html#hierarchical-roles
-        ROLE_ADMIN: ROLE_USER
-        ROLE_USER: ROLE_BANNED
-        ROLE_BANNED: [ROLE_NUL]
+        ROLE_ADMIN: [ROLE_USER]
+        ROLE_USER: []
+        ROLE_BANNED: []
 
 when@test:
     security:
