--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=320358a6abce2a00f625e548c22d6f61
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,7 +26,7 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://user:password@127.0.0.1:5432/blog-tp?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -37,5 +37,17 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+# MAILER_DSN=null://null
+MAILER_DSN=resend+smtp://resend:re_8vVF8x65_HacZzFN4JQqVpcSEAZkRQZ2F@default
 ###< symfony/mailer ###
+
+POSTGRES_VERSION=16
+POSTGRES_DB=blog-tp
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+
+ADMINER_PORT=8081
+###> symfony/resend-mailer ###
+# MAILER_DSN=resend+api://API_KEY@default
+# MAILER_DSN=resend+smtp://resend:API_KEY@default
+###< symfony/resend-mailer ###
